--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
     grid-column: 1;
     grid-row: 2;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 button {
@@ -72,6 +72,10 @@ button {
     height: 40px;
     width: 175px;
 
+}
+
+.remove-button {
+    width: 100px;
 }
 
 .card-container {
@@ -92,22 +96,67 @@ button {
     height: 200px;
     width: 200px;
     color: black;*/
-    height: 200px; 
-    width: 200px;
+    height: 250px; 
+    width: 300px;
     background-color: white;
     border-radius: 5px;
     border-left: 5px solid gold;
-    padding: 15px;
-    padding-top: 30px;
+    padding: 10px;
     /* display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 2fr 1fr; */
     box-shadow: -1px 12px 9px -9px rgba(0,0,0,0.33);
+
+    display: grid;
+    grid-template-rows: 3fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    justify-items: flex-start;
 }
 
 ul {
     list-style-type: none;
 }
+
+.card-contents {
+    grid-row: 1;
+    grid-column: 1 / 3;
+
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+}
+
+.row-title {
+    grid-row: 1;
+}
+
+.row-author{
+    grid-row: 2;
+}
+
+.row-pages {
+    grid-row: 3;
+}
+
+.row-read {
+    grid-row: 4;
+}
+
+.remove-button {
+    grid-row: 2;
+    grid-column: 1;
+
+}
+
+.read-button {
+    grid-row: 2;
+    grid-column: 2;
+
+    width: 100px;
+}
+
+
 
 .modal {
     display: none; /* Hidden by default */
